--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.fhirbox.pegacorn</groupId>
-        <artifactId>pegacorn-communicate</artifactId>
+        <groupId>net.fhirfactory.pegacorn</groupId>
+        <artifactId>pegacorn-ladon</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pegacorn-ladon</relativePath>
     </parent>
@@ -16,8 +16,8 @@
     <name>Pegacorn :: Ladon :: Twin</name>
     
     <modules>
-        <module>../pegacorn-ladon-twin-executor</module>
-        <module>../pegacorn-ladon-twin-mindlesswork</module>
+        <module>../pegacorn-ladon-twin-statespace</module>
+        <module>../pegacorn-ladon-twin-behaviours</module>
     </modules>
     
     <properties>
